# kudos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
neardev/: dev-account  dev-account.env
src/: account.rs  consts.rs  contract.rs  external_db.rs  lib.rs  misc.rs  public.rs  registry.rs  settings.rs  types.rs  utils.rs
src/callbacks/: exchange_kudos_for_sbt.rs  give_kudos.rs  leave_comment.rs  mod.rs  upvote_kudos.rs  utils.rs
src/tests/: mod.rs  tests_exchange_kudos_for_sbt.rs  tests_public.rs  utils.rs
tests/: test_kudos.rs  test_required_deposit.rs  test_social_db.rs  types.rs  utils.rs  workspaces.rs
