[package]
name = "kudos-contract"
version = "0.1.0"
edition = "2021"
authors = ["Kirill QQ <zeliondragon@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
near-sdk = { version = "4.1.1", features = [] }
near-contract-standards = "4.1.1"

[dev-dependencies]
assert_matches = "1.5.0"
workspaces = { version = "0.7.0", features = ["unstable"] }
near-sandbox-utils = "0.6.2"
near-units = "0.2.0"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
